@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.3.1) unstable; urgency=low
   * http-client: remove Transfer-Encoding and Content-Length from response
     headers
   * http-client: don't read body after invoke_response()
+  * fork: retry splice() after EAGAIN
 
  --
 
